--- a/config.yml
+++ b/config.yml
@@ -237,6 +237,7 @@ modules:
             # temp:
             temp_dir: $TEMP_DIR/georeference
             # misc:
+            # reformat: ""
 
 
     # ---------------------------------------------------------------------------
